# tempo

./: .gitignore  README.md  pyproject.toml  train.slurm
runs/rnnt_search_v3/optuna/: best_trial.json  trials.csv
runs/rnnt_search_v3/optuna/trial_0000/: config.json  history.json
runs/rnnt_search_v3/optuna/trial_0001/: config.json  history.json
runs/rnnt_search_v3/optuna/trial_0002/: config.json  history.json
runs/rnnt_search_v3/optuna/trial_0003/: config.json  history.json
runs/rnnt_search_v3/optuna/trial_0004/: config.json  dataset_summary.json  history.json
runs/rnnt_search_v3/optuna/trial_0005/: config.json  history.json
runs/rnnt_search_v3/optuna/trial_0006/: config.json  history.json
runs/rnnt_search_v3/optuna/trial_0007/: config.json  history.json
runs/rnnt_search_v3/optuna/trial_0008/: config.json  history.json
runs/rnnt_search_v3/optuna/trial_0009/: config.json  history.json
runs/rnnt_search_v3/optuna/trial_0010/: config.json  history.json
runs/rnnt_search_v3/optuna/trial_0011/: config.json  history.json
runs/rnnt_search_v3/optuna/trial_0012/: config.json  history.json
runs/rnnt_search_v3/optuna/trial_0013/: config.json  history.json
runs/rnnt_search_v3/optuna/trial_0014/: config.json  history.json
tempo/: __init__.py
tempo/datasets/: __init__.py  cli.py  registry.py  report.py  utils.py
tempo/datasets/sources/: __init__.py  cameo.py  cremad.py  emodb.py  emotale.py  iemocap.py  ravdess.py  savee.py  tess.py
tempo/training/: __init__.py  cli.py  data.py  models.py  train.py  triplet.py
(+275 files in other folders)
